카운셀 예약 합치기 완료 마이페이지 다시 뿌리기 진행중